[package]
name = "quiver"
version = "0.2.1"
edition = "2024"
description = "A module manager for Nushell"
license = "MIT"
repository = "https://github.com/freepicheep/quiver"
homepage = "https://github.com/freepicheep/quiver"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
git2 = "0.20"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
walkdir = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "qv"
path = "src/main.rs"
