[package]
name = "quiver"
version = "0.4.0"
edition = "2024"
description = "A module manager for Nushell"
license = "MIT"
repository = "https://github.com/freepicheep/quiver"
homepage = "https://github.com/freepicheep/quiver"

[dependencies]
dirs = "6"
git2 = "0.20"
hex = "0.4"
semver = "1"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "1.0.3"
walkdir = "2"
indicatif = "0.18.4"
console = "0.16.2"
flate2 = "1"
tar = "0.4"
xz2 = "0.1"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.zip]
version = "8.2.0"
default-features = false
features = ["deflate"]

[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "qv"
path = "src/main.rs"
