[package]
name = "quiver"
version = "0.7.3"
edition = "2024"
description = "A module manager for Nushell"
license = "MIT"
repository = "https://github.com/freepicheep/quiver"
homepage = "https://github.com/freepicheep/quiver"

[dependencies]
dirs = "6"
hex = "0.4"
semver = "1"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
nuon = "0.112.2"
walkdir = "2"
reflink-copy = "0.1.30"
indicatif = "0.18.4"
console = "0.16.2"
flate2 = "1"
tar = "0.4"
xz2 = "0.1"
ratatui = "0.29"
crossterm = "0.29"
syntect = "5.2"
tui-scrollview = "0.5"
rayon = "1"

[dependencies.nu-protocol]
version = "0.112.2"
default-features = false

[dependencies.leaves-tui]
git = "https://github.com/freepicheep/leaves.git"
branch = "main"

[dependencies.git2]
version = "0.20"
features = ["vendored-libgit2"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.zip]
version = "8.2.0"
default-features = false
features = ["deflate"]

[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "qv"
path = "src/main.rs"

[[bin]]
name = "qvx"
path = "src/main.rs"
